# ORC

./: .gitattributes  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: linux.yml  windows.yml
OrcMain/: CMakeLists.txt
OrcMain/include/: Orc.h  OrcApplicationContext.h  OrcCommandList.h  OrcDefines.h  OrcEntity.h  OrcException.h  OrcGraphicsCommandList.h  OrcGraphicsDevice.h  OrcGraphicsFormat.h  OrcGraphicsResource.h  OrcManager.h  OrcRoot.h  OrcSingleton.h  OrcStdHeaders.h  OrcTypes.h
OrcMain/src/: OrcApplicationContext.cpp  OrcCommandList.cpp  OrcCommandList.h  OrcD3D12CommandList.cpp  OrcD3D12GraphicsBuffer.cpp  OrcD3D12GraphicsCommandList.cpp  OrcD3D12GraphicsDevice.cpp  OrcD3D12Prerequisites.h  OrcDetail.h  OrcEntity.cpp  OrcException.h  OrcGpuResource.h  OrcGraphicsDevice.cpp  OrcGraphicsDevice.h  OrcGraphicsFactory.cpp  OrcGraphicsFactory.h  OrcGraphicsPrerequisites.h  OrcManager.cpp  OrcPrerequisites.h  OrcRoot.cpp  OrcVulkanCommandList.cpp  OrcVulkanGraphicsBuffer.cpp  OrcVulkanGraphicsCommandList.cpp  OrcVulkanGraphicsDevice.cpp  OrcVulkanMemoryImplement.cpp  OrcVulkanPrerequisites.h
Samples/: CMakeLists.txt
Samples/Model/: Model.cpp
Samples/Window/: Window.cpp
